Jquery Carousel, Fixed Sticky Nav
Cropped only one image so I could test out the carousel. fixed the
sticky navigation. Made tweaks to make the carousel work well with
everything else on the page.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -13,8 +13,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -25,12 +25,16 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+html {
+	overflow-x: hidden;
+}
 body {
 	line-height: 1;
+	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
@@ -152,6 +156,12 @@ a.button{
 a.button:hover{
 	color: #CCCCCC;
 }
+#sticky_navigation_wrapper {
+	height: 32`px;
+}
+#sticky_navigation {
+	width: 100%;
+}
 nav{
 	text-align: center;
 	clear:both;
@@ -167,7 +177,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 
 	padding: 8px 0px 8px 0px;
 -webkit-box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .3);
-        
+
         box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .3);
 
 }
@@ -191,10 +201,10 @@ nav a:hover{
 
 
 #banner{
-	background: url(images/6.jpg) center center no-repeat;
-	background-size: cover;
-	height: 500px;
-	margin-top: 50px;
+	/*background: url(images/6.jpg) center center no-repeat;*/
+	/*background-size: cover;*/
+	/*height: 500px;*/
+	margin-top: 75px;
 }
 #banner .content{
 	max-width: 960px;
@@ -205,8 +215,9 @@ nav a:hover{
 	letter-spacing: 4px;
 	color: #000;
 	font-family: 'skarpalt';
-	position: relative;
+	position: absolute;
 	top: 180px;
+	left: 80px;
 }
 
 #slogan #top{
@@ -243,8 +254,9 @@ nav a:hover{
 
 a.outline{
 	float:right;
-	position: relative;
-	top: 400px;
+	position: absolute;
+	top: 240px;
+	right: 100px;
 	background: rgba(255,255,255,.3);
 	padding: 0px;
 	display: block;
@@ -278,7 +290,7 @@ color: #555555;
   padding: 15px 5px 15px 5px;
   text-align: center;
   text-shadow: 0 1px 0 #3ab2cc;
-  width: 150px; 
+  width: 150px;
 }
 
   .clean-gray:hover {
@@ -292,7 +304,7 @@ color: #555555;
     border: 1px solid #155b6a;
     border-bottom: 1px solid #24869b;
     cursor: pointer;
-    text-shadow: none; 
+    text-shadow: none;
 }
 
   .clean-gray:active {
@@ -498,7 +510,7 @@ transform: rotate(0deg);
 transform: rotate(1deg);
 -webkit-backface-visibility:hidden; /*prevent rotated text in the caption being jagged in Chrome and Safari*/
 }
- 
+
 .polaroid img {
   border: 10px solid #fffff3;
   border-bottom: 45px solid #fffff3;
@@ -664,7 +676,7 @@ transform: rotate(1deg);
 clear:both;
 }
 #gatherings #social h3, #gatherings #profit h3{
-	position:relative; 
+	position:relative;
 	left: 20%;
 }
 .gatheringsFor img{
@@ -714,7 +726,7 @@ clear:both;
 transform: rotate(-1deg);
 -webkit-backface-visibility:hidden; /*prevent rotated text in the caption being jagged in Chrome and Safari*/
 }
- 
+
 .gatheringsFor .polaroid2 img {
   border: 10px solid #fffff3;
   border-bottom: 45px solid #fffff3;
@@ -735,7 +747,7 @@ transform: rotate(-1deg);
 transform: rotate(1deg);
 -webkit-backface-visibility:hidden; /*prevent rotated text in the caption being jagged in Chrome and Safari*/
 }
- 
+
 .gatheringsFor .polaroid3 img {
   border: 10px solid #fffff3;
   border-bottom: 45px solid #fffff3;
@@ -854,7 +866,7 @@ form input.clean-gray{
 
 .shadow:after	{
 	-webkit-box-shadow: inset 0 15px 15px -20px rgba(0,0,0,0.5);
-	-moz-box-shadow: inset 0 15px 15px -20px rgba(0,0,0,0.5);				
+	-moz-box-shadow: inset 0 15px 15px -20px rgba(0,0,0,0.5);
 	-webkit-mask-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1) 20%, rgba(0,0,0,1) 80%, rgba(0,0,0,0) 100%);
 	-moz-mask-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1) 20%, rgba(0,0,0,1) 80%, rgba(0,0,0,0) 100%);
 	height: 20px;
@@ -1132,7 +1144,7 @@ footer a:hover{
        	position: relative;
        	left: 188px;
        	top: -30px;
-       
+
        }
        .resultsframe{
        	-webkit-transform:rotate(0deg);
@@ -1251,7 +1263,7 @@ transform: rotate(1deg);
 max-width: 50%;
 -webkit-backface-visibility:hidden; /*prevent rotated text in the caption being jagged in Chrome and Safari*/
 }
- 
+
 .gatheringsFor .polaroid3 img {
   border: 10px solid #fffff3;
   border-bottom: 45px solid #fffff3;
@@ -1287,7 +1299,7 @@ max-width: 50%;
 clear:both;
 }
 #gatherings #social h3, #gatherings #profit h3{
-	position:relative; 
+	position:relative;
 	left: 20%;
 }
 #gatherings #good{
@@ -1342,7 +1354,7 @@ transform: rotate(-1deg);
 max-width: 40%;
 -webkit-backface-visibility:hidden; /*prevent rotated text in the caption being jagged in Chrome and Safari*/
 }
- 
+
 .gatheringsFor .polaroid2 img {
   border: 10px solid #fffff3;
   border-bottom: 45px solid #fffff3;
@@ -1365,7 +1377,7 @@ transform: rotate(1deg);
 max-width: 40%;
 -webkit-backface-visibility:hidden; /*prevent rotated text in the caption being jagged in Chrome and Safari*/
 }
- 
+
 .gatheringsFor .polaroid3 img {
   border: 10px solid #fffff3;
   border-bottom: 45px solid #fffff3;
